# snaky

./: .gitignore  README.md  config.json  main.py  mypy.ini  pyproject.toml  records.json  run.sh  run_valid.sh  validate.sh
resources/textures/: apple.aseprite  field.aseprite  snake_animattion.aseprite  snake_body_blended_right.aseprite  snake_body_straight.aseprite  snake_head.aseprite  snake_tail.aseprite
snaky/: __init__.py  __main__.py  app.py  gameMap.py  gameModule.py  general.py  menu.py  menuModule.py  snake.py  stats.py
src/snaky/: __init__.py  appleModule.py  config.json  gameMap.py  gameModule.py  general.py  snake.py
src/snaky/resources/textures/: apple.aseprite  crown.aseprite  field.aseprite  magic_rod.aseprite
