[project]
name = "snaky"
version = "0.0.0"
description = "Simple snake game"
authors = [
    {name = "allivka",email = "allivka1920@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
]

[tool.poetry]
packages = [{include = "snaky", from = "."}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
